src/styles/custom.scss
// Import Bootstrap functions, variables, and mixins
@import "~bootstrap/scss/functions";
@import "~bootstrap/scss/variables";
@import "~bootstrap/scss/mixins";

// Custom variable overrides can go here

// Create a new theme-colors map
$custom-theme-colors: (
	"primary": $primary,
	"secondary": $secondary,
	// Add other colors as needed
);

// Merge the custom theme colors with the default theme colors
$theme-colors: map-merge($theme-colors, $custom-theme-colors);

// Import Bootstrap
@import "~bootstrap/scss/bootstrap";

// Custom styles for dark mode
body.dark {
	background-color: $dark;
	color: $light;

	.card {
		background-color: $gray-800;
		border-color: $gray-700;
		color: $light;

		.card-header {
			background-color: $gray-900;
			border-bottom-color: $gray-700;
		}

		.card-footer {
			background-color: $gray-900;
			border-top-color: $gray-700;
		}
	}

	.navbar {
		background-color: $gray-900;

		// Add styles for navbar text
		.navbar-brand,
		.nav-link,
		.navbar-text {
			color: $light;

			&:hover,
			&:focus {
				color: $gray-200;
			}
		}

		// Style for active nav items
		.nav-item.active .nav-link {
			color: $primary;
		}
	}

	// Add ListGroup styles for dark mode
	.list-group {
		.list-group-item {
			background-color: $gray-800;
			border-color: $gray-700;
			color: $light;

			&:hover {
				background-color: $gray-700;
			}

			small {
				color: $gray-400;
			}
		}
	}

	// Form check input styles moved outside of list-group
	.form-check-input {
		background-color: $gray-700;
		border-color: $gray-600;

		&:checked {
			background-color: $primary;
			border-color: $primary;
		}
	}

	// Add styles for form controls in dark mode
	.form-control {
		background-color: $gray-700;
		border-color: $gray-600;
		color: $light;

		&:focus {
			background-color: $gray-800;
			border-color: $primary;
			box-shadow: 0 0 0 0.2rem rgba($primary, 0.25);
		}

		&::placeholder {
			color: $gray-500;
		}
	}

	// Modal styles for dark mode
	.modal-content {
		background-color: $gray-800;
		border-color: $gray-700;
	}

	.modal-header {
		border-bottom-color: $gray-700;
	}

	.modal-footer {
		border-top-color: $gray-700;
	}

	.modal-title {
		color: $light;
	}

	.close {
		color: $light;
		text-shadow: none;

		&:hover {
			color: $gray-300;
		}
	}

	// Table styles without !important flags
	.table {
		color: $light;

		> :not(caption) > * > * {
			color: $light;
			background-color: $gray-800;
			border-bottom-color: $gray-700;
		}

		> thead {
			background-color: $gray-900;
			color: $light;
		}

		> tbody {
			background-color: $gray-800;
		}

		th,
		td {
			border-color: $gray-700;
		}

		&-striped > tbody > tr:nth-of-type(odd) > * {
			background-color: rgba($gray-700, 0.05);
		}

		&-hover > tbody > tr:hover > * {
			background-color: rgba($gray-600, 0.075);
		}
	}

	// Dropdown styles for dark mode
	.dropdown-menu {
		background-color: $gray-800;
		border-color: $gray-700;

		.dropdown-item {
			color: $light;

			&:hover,
			&:focus {
				color: $light;
				background-color: $gray-700;
			}

			&.active,
			&:active {
				color: $white;
				background-color: $primary;
			}
		}

		.dropdown-divider {
			border-top-color: $gray-700;
		}
	}

	// Add more dark mode styles as needed
}

